Bug 1000315 - Part 3: Uninstall prompting on Desktop and WebRT.

--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -449,6 +449,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Wilt u “%1$S” vanaf deze website (%2$S) installeren?
 webapps.install.success = Toepassing geïnstalleerd
 webapps.install.inprogress = Installatie wordt uitgevoerd
+webapps.uninstall = De-installeren
+webapps.uninstall.accesskey = D
+webapps.doNotUninstall = Niet de-installeren
+webapps.doNotUninstall.accesskey = N
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Wilt u “%1$S” de-installeren?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S gebruikt nu het volledige scherm.
