--- a/nl/webapprt/webapprt/webapp.properties
+++ b/nl/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=%S installeren
 webapps.install.description=Wilt u %S installeren?
 webapps.install.install=App installeren
 webapps.install.dontinstall=Niet installeren
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=%S de-installeren
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Wilt u %S de-installeren?
+webapps.uninstall.uninstall=App de-installeren
+webapps.uninstall.dontuninstall=Niet de-installeren
 
 paymentDialog.title=Betaling
 paymentDialog.message=Welke betaalprovider wilt u gebruiken?
