Bug 1040369 - Replace sponsored icon with identifying text

--- a/nl/browser/chrome/browser/newTab.properties
+++ b/nl/browser/chrome/browser/newTab.properties
@@ -5,4 +5,16 @@
 newtab.pin=Deze website op de huidige positie vastzetten
 newtab.unpin=Deze website losmaken
 newtab.block=Deze website verwijderen
-newtab.sponsored=Informatie op gesponsorde tegels tonen
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=GESPONSORD
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Deze tegel wordt getoond namens een Mozillapartner. U kunt het elk gewenst moment verwijderen door op de %1$S-knop te klikken. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Een Mozillapartner heeft deze tegel visueel verbeterd, schermafbeelding vervangen. U kunt verbeterde tegels uitschakelen door op de %1$S-knop te klikken voor uw voorkeuren. %2$S
+newtab.learn.link=Meer info…
