--- a/nl/browser/chrome/browser/newTab.properties
+++ b/nl/browser/chrome/browser/newTab.properties
@@ -17,4 +17,14 @@ newtab.sponsored.explain=Deze tegel wordt getoond namens een Mozillapartner. U k
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
 newtab.enhanced.explain=Een Mozillapartner heeft deze tegel visueel verbeterd, schermafbeelding vervangen. U kunt verbeterde tegels uitschakelen door op de %1$S-knop te klikken voor uw voorkeuren. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Als u een nieuw tabblad opent zal u tegels zien met de websites die u regelmatig bezoekt samen met stegels waarvan wij denken dat ze interessant zijn voor u. Een aantal van deze tegels zijn mogelijk gesponsord door Mozillapartners. We zullen altijd aangeven welke tegels zijn gesponsord. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Om deze service te verzorgen verzameld en gebruikt Mozilla bepaalde analyse-informatie met betrekking op uw gebruik van de tegels in overeenstemmning met onze %1$S.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=U kunt de tegeleigenschap uitzetten door op de %1$S-knop te klikken voor uw voorkeuren.
 newtab.learn.link=Meer info…
+newtab.privacy.link=Privacyverklaring
