Bug 1016300 - Move inline scripts and styles into separate files for in-content preferences.

--- a/nl/browser/chrome/browser/preferences/preferences.properties
+++ b/nl/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=De volgende cookies zijn op uw computer opgeslagen:
 cookiesFiltered=De volgende cookies komen overeen met uw zoekactie:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Offlinewebsitegegevens verwijderen
 offlineAppRemovePrompt=%S zal niet meer offline beschikbaar zijn na het verwijderen van deze gegevens. Weet u zeker dat u deze offlinewebsite wilt verwijderen?
 offlineAppRemoveConfirm=Offlinegegevens verwijderen
