[fa] update from Pootle (firefox)

--- a/fa/browser/branding/official/brand.properties
+++ b/fa/browser/branding/official/brand.properties
@@ -6,10 +6,10 @@ brandShortName=فایرفاکس
 brandFullName=موزیلا فایرفاکس
 vendorShortName=موزیلا
 
-homePageSingleStartMain=صفحه ی شروع فایرفاکس، یک صفحه ی سریع همراه با جست‌و‌جو
-homePageImport=وارد کردن صفحه ی اصلی از %S
+homePageSingleStartMain=صفحه‌ی شروع فایرفاکس، سریع همراه با جست‌و‌جو
+homePageImport=وارد کردن صفحه‌ی اصلی از %S
 
-homePageMigrationPageTitle=انتخاب صفحۀ اصلی
-homePageMigrationDescription=لطفا صفحه ی اصلی را که میخواهید استفاده کنید را انتخاب کنید:
+homePageMigrationPageTitle=انتخاب صفحه‌‌ی اصلی
+homePageMigrationDescription=لطفا صفحه‌ی اصلی مورد نظر خود را انتخاب کنید:
 
-syncBrandShortName=هم‌گام‌سازی
+syncBrandShortName=همگام‌سازی
