--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -15,6 +15,7 @@ save-page-button.tooltiptext3 = ذخیره این صفحه %S
 
 find-button.label = پیدا کردن
 # LOCALIZATION NOTE(find-button.tooltiptext3): %S is the keyboard shortcut.
+find-button.tooltiptext3 = در این صفحه جست‌و‌جو کن (%S)
 
 open-file-button.label = باز کردن پرونده
 # LOCALIZATION NOTE (open-file-button.tooltiptext3): %S is the keyboard shortcut.
@@ -30,45 +31,67 @@ add-ons-button.label = افزودنی‌ها
 # LOCALIZATION NOTE(add-ons-button.tooltiptext3): %S is the keyboard shortcut
 add-ons-button.tooltiptext3 = مدیریت افزونه‎ ها (%S)
 
+switch-to-metro-button2.label = ویندوز8 لمسی
 # LOCALIZATION NOTE(switch-to-metro-button2.tooltiptext): %S is the brand short name
+switch-to-metro-button2.tooltiptext = راه اندازی در %S برای وینذوز 8 لمسی
 
 preferences-button.label = ترجیحات
+preferences-button.tooltiptext2 = باز کردن ترجیحات
+preferences-button.tooltiptext.withshortcut = باز کردن ترجیحات (%S)
 # LOCALIZATION NOTE (preferences-button.labelWin): Windows-only label for Options
 preferences-button.labelWin = گزینه‌ها
 # LOCALIZATION NOTE (preferences-button.tooltipWin): Windows-only tooltip for Options
+preferences-button.tooltipWin2 = باز کردن گزینه‌ها
 
 
-zoom-out-button.label = کوچک‌نمایی
+zoom-out-button.label = کوچک‌ نمایی (زوم به بیرون)
 # LOCALIZATION NOTE(zoom-out-button.tooltiptext2): %S is the keyboard shortcut.
+zoom-out-button.tooltiptext2 = کوچک‌ نمایی( %S)
 
 # LOCALIZATION NOTE(zoom-reset-button.label): %S is the current zoom level,
 # %% will be displayed as a single % character (% is commonly used to define
 # format specifiers, so it needs to be escaped).
+zoom-reset-button.label = %S%%
 # LOCALIZATION NOTE(zoom-reset-button.tooltiptext2): %S is the keyboard shortcut.
+zoom-reset-button.tooltiptext2 = بازگردان به سطح اولیه زوم
 
 zoom-in-button.label = بزرگ‌نمایی
 # LOCALIZATION NOTE(zoom-in-button.tooltiptext2): %S is the keyboard shortcut.
+zoom-in-button.tooltiptext2 = بزرگ‌نمایی (%S)
 
+edit-controls.label = ابزارهای ویرایش
+edit-controls.tooltiptext2 = ابزارهای ویرایش
 
-cut-button.label = بریدن
+cut-button.label = بریدن و برداشتن
 # LOCALIZATION NOTE(cut-button.tooltiptext2): %S is the keyboard shortcut.
+cut-button.tooltiptext2 = بریدن و برداشتن (%S)
 
 copy-button.label = رونوشت برداشتن
 # LOCALIZATION NOTE(copy-button.tooltiptext2): %S is the keyboard shortcut.
+copy-button.tooltiptext2 = رونوشت برداشتن
 
-paste-button.label = چسباندن
+paste-button.label = جایگذاری
 # LOCALIZATION NOTE(paste-button.tooltiptext2): %S is the keyboard shortcut.
+paste-button.tooltiptext2 = جایگذاری (%S)
 
-feed-button.label = آبونه شدن
+feed-button.label = دنبال کردن
+feed-button.tooltiptext2 = دنبال کردن این صفحه…
 
 # LOCALIZATION NOTE (characterencoding-button.label): The \u00ad character at the beginning
 # of the string is used to disable auto hyphenation on the button text when it is displayed
 # in the menu panel.
+characterencoding-button.tooltiptext2 = نمایش گزینه های کدگذاری کاراکترها
 
+email-link-button.tooltiptext3 = ایمیل کردن یک لینک به ابن صفحه
 
 # LOCALIZATION NOTE(quit-button.tooltiptext.linux2): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
+quit-button.tooltiptext.linux2 = خروج %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 
+panic-button.label = فراموش کردن
+panic-button.tooltiptext = فراموش کردن بعضی تاریخچه مرورها
 
+loop-call-button.label = دعوت کسی به صحبت
+loop-call-button.tooltiptext = دعوت کسی به صحبت
