--- a/fa/browser/chrome/browser/devtools/gcli.properties
+++ b/fa/browser/chrome/browser/devtools/gcli.properties
@@ -172,6 +172,7 @@ helpManRequired=مورد نیاز
 # disconnectPrefixDesc): These strings describe the 'disconnect' command and
 # all its available parameters. See localization comment for 'connect' for an
 # explanation about 'prefix'.
+disconnectDesc2=قطع اتصال از سرور
 
 # LOCALIZATION NOTE: This is the output of the 'disconnect' command,
 # explaining the user what has been done. Parameters: %S is the number of
