--- a/fa/dom/chrome/accessibility/AccessFu.properties
+++ b/fa/dom/chrome/accessibility/AccessFu.properties
@@ -3,8 +3,13 @@
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Screen reader started/stopped
+screenReaderStarted = صفحه خوان آغاز به کار کرد.
+screenReaderStopped = صفحه خوان متوقف شد.
 
 # Roles
+menubar        =       نوار منو
+scrollbar      =       نوار پیمایش
+alert          =       هشدار
 table          =       جدول
 link           =       پیوند
 pushbutton     =       دکمه
@@ -16,6 +21,9 @@ figure         =       شكل
 textarea       =       ناحیه‌ی متن
 
 # Text input types
+textInputType_date   =       تاریخ
+textInputType_email  =       ایمیل
+textInputType_tel    =       تلفن
 textInputType_url    =       نشانی اینترنتی
 
 # More sophisticated object descriptions
@@ -26,6 +34,7 @@ listStart      =       اولین مورد
 listEnd        =       آخرین مورد
 # LOCALIZATION NOTE (listItemsCount): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+listItemsCount =       1مورد ;#1 مورد‌
 
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
@@ -34,6 +43,7 @@ listEnd        =       آخرین مورد
 # Landmark announcements
 banner         =       بنر
 complementary  =       مکمل
+contentinfo    =       اطلاعات تماس
 main           =       اصلی
 
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
@@ -44,9 +54,12 @@ main           =       اصلی
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 
 # table or grid cell information
+columnInfo = ستون%S
+rowInfo = سطر %S
 
 # Invoked actions
 jumpAction     =      پرش شده
+pressAction    =      فشرده شده
 checkAction    =      انتخاب شده
 uncheckAction  =      انتخاب نشده
 openAction     =      باز شده
@@ -71,12 +84,14 @@ tabReload      =      بارگذاری مجدد
 # Object states
 stateChecked     =    انتخاب شده
 stateNotChecked  =    انتخاب نشده
+statePressed     =    فشرده شده
 # No string for a not pressed toggle button
 stateExpanded    =    گسترش یافته
 stateCollapsed   =    جمع  شده
 stateUnavailable =    موجود نیست
 stateRequired    =    مورد نیاز
 stateTraversed   =    دیده شده
+stateHasPopup    =    ظاهر شده
 
 # App modes
 editingMode    =      درحال ویرایش
@@ -87,8 +102,10 @@ quicknav_Simple      = پیش‌فرض
 quicknav_Anchor      = لنگرها               \u0020
 quicknav_Button      = کلیدها
 quicknav_Combobox    = جعبه‌ی ترکیبی
+quicknav_Landmark    = نشان های اختصاصی
 quicknav_Entry       = مدخل‌ها
 quicknav_FormElement = عناصر فرم
+quicknav_Graphic     = تصاویر
 quicknav_Link        = پیوندها
 quicknav_List        = فهرست
 quicknav_PageTab     = زبانۀ صفحه
