--- a/fa/toolkit/chrome/places/places.properties
+++ b/fa/toolkit/chrome/places/places.properties
@@ -31,3 +31,4 @@ localhost=(پرونده‌های محلی)
 # LOCALIZATION NOTE (windows8TouchTitle): this is the name of the folder used
 # to store bookmarks created in Metro mode and share bookmarks between Metro
 # and Desktop.
+windows8TouchTitle=ویندوز8 لمسی
