[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -74,6 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=D
 
 lwthemePostInstallNotification.message=Nova tema je instalirana.
 lwthemePostInstallNotification.undoButton=Vrati
+lwthemePostInstallNotification.undoButton.accesskey=V
 lwthemePostInstallNotification.manageButton=Uređivanje tema…
 lwthemePostInstallNotification.manageButton.accesskey=U
 
@@ -551,6 +552,7 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Trenutno dijelite svoju kameru s ovom stranicom.
 getUserMedia.sharingMicrophone.message2 = Trenutno dijelite svoj mikrofon s ovom stranicom.
 getUserMedia.sharingCameraAndMicrophone.message2 = Trenutno dijelite svoju kameru i mikrofon s ovom stranicom.
+getUserMedia.sharingApplication.message = Trenutno dijelite aplikaciju s ovom stranicom.
 getUserMedia.sharingScreen.message = Trenutno dijelite svoj ekran s ovom stranicom.
 getUserMedia.sharingWindow.message = Trenutno dijelite svoj prozor s ovom stranicom.
 getUserMedia.continueSharing.label = Nastavi dijeliti
@@ -558,6 +560,8 @@ getUserMedia.continueSharing.accesskey = i
 getUserMedia.stopSharing.label = Zaustavi dijeljenje
 getUserMedia.stopSharing.accesskey = Z
 
+getUserMedia.sharingMenu.label = Kartice koje dijele uređaje
+getUserMedia.sharingMenu.accesskey = u
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
 #                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
@@ -569,8 +573,21 @@ getUserMedia.stopSharing.accesskey = Z
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (kamera)
+getUserMedia.sharingMenuMicrophone = %S (mikrofon)
+getUserMedia.sharingMenuApplication = %S (aplikacija)
+getUserMedia.sharingMenuScreen = %S (zaslon)
+getUserMedia.sharingMenuWindow = %S (prozor)
+getUserMedia.sharingMenuCameraMicrophone = %S (kamera i mikrofon)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon i aplikacija)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon i zaslon)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon i prozor)
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon i aplikacija)
+getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon i zaslon)
+getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon i prozor)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Nepoznati izvor
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = Čini se da se %S sporo otvara.
