--- a/hr/browser/chrome/browser/devtools/storage.properties
+++ b/hr/browser/chrome/browser/devtools/storage.properties
@@ -63,19 +63,34 @@ table.headers.cookies.host=Domena
 table.headers.cookies.expires=Istječe
 table.headers.cookies.value=Vrijednost
 table.headers.cookies.lastAccessed=Posljednje pristupanje
+table.headers.cookies.creationTime=Stvoreno
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
+table.headers.cookies.isHttpOnly=isHttpOnly
 # LOCALIZATION NOTE (table.headers.cookies.isSecure):
 # This string is used in the header for the column which denotes whether a
 # cookie can be accessed via a secure channel only or not.
+table.headers.cookies.isSecure=isSecure
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
+table.headers.cookies.isDomain=isDomain
 
+table.headers.localStorage.name=Ključ
+table.headers.localStorage.value=Vrijednost
 
+table.headers.sessionStorage.name=Ključ
+table.headers.sessionStorage.value=Vrijednost
 
+table.headers.indexedDB.name=Ključ
+table.headers.indexedDB.db=Naziv baze
+table.headers.indexedDB.objectStore=Naziv objektnog spremišta
+table.headers.indexedDB.value=Vrijednost
+table.headers.indexedDB.origin=Izvor
 table.headers.indexedDB.version=Inačica
+table.headers.indexedDB.objectStores=Objektna spremišta
+table.headers.indexedDB.keyPath=Ključ
 table.headers.indexedDB.autoIncrement=Automatsko povećanje
 table.headers.indexedDB.indexes=Indeksi
 
