--- a/hr/browser/chrome/browser/devtools/webide.properties
+++ b/hr/browser/chrome/browser/devtools/webide.properties
@@ -3,17 +3,33 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 title_noApp=Firefox WebIDE
+title_app=Firefox WebIDE: %S
 
+runtimeButton_label=Odaberi runtime
+projectButton_label=Otvori aplikaciju
 
 mainProcess_label=Glavni proces
 
+local_runtime=Lokalni runtime
+remote_runtime=Udaljeni runtime
+remote_runtime_promptTitle=Udaljeni runtime
+remote_runtime_promptMessage=poslužitelj:ulaz
 
+importPackagedApp_title=Odaberi direktorij
+importHostedApp_title=Otvori hostanu aplikaciju
+importHostedApp_header=Upiši URL manifesta
 
+notification_showTroubleShooting_label=otklanjanje grešaka
+notification_showTroubleShooting_accesskey=t
 
 # These messages appear in a notification box when an error occur.
 
+error_cantInstallNotFullyConnected=Projekt nije moguće instalirati. Veza nije u potpunosti uspostavljena.
+error_cantInstallValidationErrors=Projekt nije moguće instalirati. Postoje validacijske greške.
+error_listRunningApps=Nije moguće učitati popis aplikacija na uređaju.
 
 # Variable: name of the operation (in english)
+error_operationTimeout=Operaciji je isteklo vrijeme: %1$S
 error_operationFail=Operacija nije uspjela: %1$S
 
 # Variable: app name
@@ -42,5 +58,12 @@ addons_status_installing=instalacija
 
 runtimedetails_checkno=ne
 runtimedetails_checkyes=da
+runtimedetails_checkunkown=nepoznato
+runtimedetails_notUSBDevice=Nije USB uređaj
 
 # Validation status
+status_tooltip=Status provjere: %1$S
+status_valid=VALID
+status_warning=WARNINGS
+status_error=ERRORS
+status_unknown=UNKNOWN
