--- a/hr/webapprt/webapprt/overrides/dom.properties
+++ b/hr/webapprt/webapprt/overrides/dom.properties
@@ -6,7 +6,7 @@ KillScriptTitle=Upozorenje: nereagirajuća skripta
 KillScriptMessage=Skripta  je možda zauzeta ili je prestala odgovarati. Skriptu možete zaustaviti odmah ili možete nastaviti čekati da završi.
 KillScriptWithDebugMessage=Skripta je možda zauzeta ili je prestala odgovarati. Skriptu možete zaustaviti odmah, otvoriti je u programu za pronalazak grešaka ili je možete pustiti da nastavi s radom.
 KillScriptLocation=Skripta: %S
-StopScriptButton=&Zaustavi skriptu
+StopScriptButton=Zaustavi skriptu
 DebugScriptButton=Ispravi greške u skripti
 WaitForScriptButton=Nastavi
 DontAskAgain=&Ne pitaj me ponovo
