--- a/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -87,7 +87,7 @@ feed-button.tooltiptext2 = Pretplati se na ovu stranicu
 characterencoding-button.label = Kôdna stranica
 characterencoding-button.tooltiptext2 = Prikaži mogućnosti kôdnih stranica
 
-email-link-button.label = Pošalji pov&eznicu e-poštom
+email-link-button.label = Pošalji poveznicu e-poštom
 email-link-button.tooltiptext3 = Pošalji e-poštom poveznicu na ovu stranicu
 
 # LOCALIZATION NOTE(quit-button.tooltiptext.linux2): %1$S is the brand name (e.g. Firefox),
