--- a/hr/browser/chrome/browser/loop/loop.properties
+++ b/hr/browser/chrome/browser/loop/loop.properties
@@ -45,17 +45,28 @@ could_not_connect=Povezivanje na poslužitelj nije uspjelo
 check_internet_connection=Molim provjerite vašu Internet vezu
 login_expired=Vaša prijava je istekla
 service_not_available=Usluga je trenutno nedostupna
+problem_accessing_account=Došlo je do problema prilikom pristupanja vašem računu
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Pokušaj ponovno
 
+share_email_subject3=Pozvani ste na razgovor
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Da biste prihvatili pozivnicu, kopirajte ili kliknite na ovu poveznicu da biste započeli razgovor:\n\n{{callUrl}}
+share_button=E-pošta
 copy_url_button=Kopiraj
+copied_url_button=Kopirano!
 
+panel_footer_signin_or_signup_link=Prijavite se ili se registrirajte
 
+settings_menu_item_account=Korisnički račun
+settings_menu_item_settings=Postavke
+settings_menu_item_signout=Odjava
 settings_menu_item_signin=Prijava
+settings_menu_button_tooltip=Postavke
 
 # Contact Strings (Panel)
 
@@ -67,14 +78,18 @@ contacts_search_placesholder=Traži…
 ## new contact sub-panel.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where this appears on the UI
+new_contact_button=Novi kontakt
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Naziv
+new_contact_email_placeholder=E-pošta
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+add_contact_button=Dodaj kontakt
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -135,22 +150,34 @@ edit_contact_title=Uredi kontakt
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Naziv
+edit_contact_email_label=E-pošta
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Gotovo
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Audio razgovor
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Video razgovor
 
 # Conversation Window Strings
 
+initiate_call_button_label2=Spremni za pokretanje vašeg razgovora?
+incoming_call_title2=Zahtjev razgovora
+incoming_call_accept_button=Prihvati
+incoming_call_accept_audio_only_tooltip=Prihvati sa zvukom
+incoming_call_cancel_button=Otkaži
+incoming_call_cancel_and_block_button=Otkaži i blokiraj
 incoming_call_block_button=Blokiraj
+hangup_button_title=Prekini
 hangup_button_caption2=Izlaz
 mute_local_audio_button_title=Utišajte vaš zvuk
 unmute_local_audio_button_title=Uključite vaš zvuk
@@ -161,10 +188,13 @@ unmute_local_video_button_title=Uključite vaš video zvuk\u0020
 ## when calling a contact. Don't translate the part between {{..}} because
 ## this will be replaced by the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Razgovor sa {{contactName}}
 
 # Outgoing conversation
 
+outgoing_call_title=Pokrenuti razgovor?
 initiate_audio_video_call_button2=Pokreni
+initiate_audio_video_call_tooltip2=Pokreni video razgovor
 initiate_audio_call_button2=Razgovor
 initiate_call_cancel_button=Odustani
 
@@ -198,7 +228,7 @@ call_timeout_notification_text=Vaš poziv nije uspio.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Pokušaj ponovno
-email_link_button=Pošalji pov&eznicu e-poštom
+email_link_button=Pošalji poveznicu e-poštom
 cancel_button=Odustani
 
 cannot_start_call_session_not_ready=Nije moguće započeti poziv, jer sesija nije spremna.
@@ -212,14 +242,28 @@ connection_error_see_console_notification=Poziv nije uspio; Provjerite konzolu z
 legal_text_and_links3=Korištenjem {{clientShortname}} slažete se sa  {{terms_of_use}} i {{privacy_notice}}.
 legal_text_tos = Uvjetima korištenja
 legal_text_privacy = Pravila o privatnosti
+client_shortname_fallback=ovaj proizvod
 
+feedback_call_experience_heading2=Kakav je bio vaš razgovor?
+feedback_what_makes_you_sad=Što vas je učinilo tužnim?
+feedback_thank_you_heading=Hvala na povratnoj informaciji!
+feedback_category_audio_quality=Kvaliteta zvuka
+feedback_category_video_quality=Kvaliteta videa
+feedback_category_was_disconnected=Bio je prekinut
+feedback_category_confusing=Zbunjujuć
+feedback_category_other=Ostalo:
+feedback_custom_category_text_placeholder=Što nije bilo u redu?
+feedback_submit_button=Pošalji
 feedback_back_button=Natrag
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Ovaj prozor će se zatvoriti za {{countdown}} sekundu;Ovaj prozor će se zatvoriti za {{countdown}} sekunde;Ovaj prozor će se zatvoriti za {{countdown}} sekundi
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Ponovno se pridruži
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
+feedback_report_user_button=Prijavi korisnika
