--- a/hr/browser/chrome/browser/shellservice.properties
+++ b/hr/browser/chrome/browser/shellservice.properties
@@ -7,8 +7,13 @@ safeModeLabel=%S &Sigurni način rada
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Poboljšajte svoje iskustvo i postavite %S kao zadani web preglednik
+setDefaultBrowserConfirm.label     = Koristi %S kao zadani preglednik
+setDefaultBrowserConfirm.accesskey = K
 setDefaultBrowserOptions.label     = Mogućnosti
 setDefaultBrowserOptions.accesskey = M
+setDefaultBrowserNotNow.label      = Ne sada
+setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Ne pitaj me ponovo
 setDefaultBrowserNever.accesskey   = N
 
