--- a/hr/browser/chrome/browser/webrtcIndicator.properties
+++ b/hr/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Indikator dijeljenja
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Vaša kamera i mikrofon se dijele. Kliknite za upravljanje dijeljenjem.
 webrtcIndicator.sharingCamera.tooltip              = Vaša kamera se dijeli. Kliknite za upravljanje dijeljenjem.
 webrtcIndicator.sharingMicrophone.tooltip          = Vaš mikrofon se dijeli. Kliknite za upravljanje dijeljenjem.
+webrtcIndicator.sharingApplication.tooltip = Aplikacija se dijeli. Kliknite za upravljanje dijeljenjem.
 webrtcIndicator.sharingScreen.tooltip = Vaš ekran se dijeli. Kliknite za upravljanje dijeljenjem.
 webrtcIndicator.sharingWindow.tooltip = Prozor se dijeli. Kliknite za upravljanje dijeljenjem.
 
@@ -23,6 +24,7 @@ webrtcIndicator.sharingWindow.tooltip = Prozor se dijeli. Kliknite za upravljanj
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Dijeljenje kamere sa "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Dijeljenje mikrofona sa "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Aplikacija se dijeli sa "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Dijeljenje ekrana sa "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Dijeljenje prozora sa "%S"
 webrtcIndicator.controlSharing.menuitem = Upravljanje dijeljenjem
@@ -37,6 +39,7 @@ webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Dijeljenje mikrofona s #1 
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Aplikacija se dijeli s #1 karticom;Aplikacija se dijeli s #1 kartice;Aplikacija se dijeli s #1 kartica
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
