--- a/hr/dom/chrome/dom/dom.properties
+++ b/hr/dom/chrome/dom/dom.properties
@@ -6,9 +6,9 @@ KillScriptTitle=Upozorenje: nereagirajuća skripta
 KillScriptMessage=Skripta na ovoj stranici je možda zauzeta ili je možda prestala odgovarati. Skriptu možete zaustaviti odmah ili možete nastaviti čekati da završi.
 KillScriptWithDebugMessage=Skripta na ovoj stranici je možda zauzeta ili je možda prestala odgovarati. Skriptu možete zaustaviti odmah i otvoriti je u programu za pronalazak grešaka, ili je možete pustiti da nastavi s radom.
 KillScriptLocation=Skripta: %S
-StopScriptButton=&Zaustavi skriptu
+StopScriptButton=Zaustavi skriptu
 DebugScriptButton=Ispravi greške u skripti
-WaitForScriptButton=N&astavi
+WaitForScriptButton=Nastavi
 DontAskAgain=&Ne pitaj me ponovo
 JSURLLoadBlockedWarning=Pokušaj učitavanje javascripta: URL jednog poslužitelja\nkoji u prozoru prikazuje sadržaj s drugog poslužitelja\nblokiran je od strane sigurnosnog upravitelja.
 WindowCloseBlockedWarning=Skripte ne mogu zatvarati prozore koji nisu bili otvoreni skriptom.
