[te] update from Pootle (firefox)

--- a/te/browser/chrome/browser/browser.properties
+++ b/te/browser/chrome/browser/browser.properties
@@ -74,6 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=ఒక కొత్త రూపలావణ్య పద్ధతి సంస్థాపించబడినది.
 lwthemePostInstallNotification.undoButton=చేయవద్దు
+lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=రూపలావణ్య పద్ధతులను నిర్వహించు…
 lwthemePostInstallNotification.manageButton.accesskey=M
 
@@ -99,6 +100,8 @@ popupShowPopupPrefix='%S' చూపించు
 
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
+badContentBlocked.blocked.message=ఈ పేజీ పైని కాంటెంట్‌ను %S నిరోధిస్తోంది.
+badContentBlocked.notblocked.message=ఈ పేజీ పైన ఏ కాంటెంట్‌ను %S నిరోధించుటలేదు.
 
 # missing plugin installer
 installPlugin.message = ఈ పేజీలో ఉన్న మాధ్యమాల్ని చూపించడానికి కావలసిన ప్లగిన్ను స్థాపించుకుంటారా?
@@ -446,7 +449,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = మీరు ఈ సైటు (%2$S) నుండి "%1$S"ను స్థాపించుకోవాలని అనుకొంటున్నారా?
 webapps.install.success = అనువర్తనం స్థాపించబడింది.
 webapps.install.inprogress = స్థాపన జరుగుతోంది
+webapps.uninstall = నిర్మూలించు
+webapps.uninstall.accesskey = U
+webapps.doNotUninstall = నిర్మూలించవద్దు
+webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = మీరు "%1$S" ను నిర్మూలించాలని అనుకుంటున్నారా?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S యిప్పుడు నిండుతెరలో వుంది.
@@ -507,7 +515,16 @@ getUserMedia.shareMicrophone.message = మీరు మీ మైక్రోఫ
 getUserMedia.shareScreen.message = మీరు మీ తెరను %S తోటి పంచుకొనవలెనని అనుకొనుచున్నారా?
 getUserMedia.shareCameraAndMicrophone.message = మీరు మీ కేమెరా మరియు మైక్రోఫోన్‌ను %S తోటి పంచుకొనవలెనని అనుకొనుచున్నారా?
 getUserMedia.shareScreenAndMicrophone.message = మీరు మీ మైక్రోఫోన్‌ను మరియు తెరను %S తోటి పంచుకొనవలెనని అనుకొనుచున్నారా?
+getUserMedia.selectWindow.label=పంచుకొనుటకు విండో:
+getUserMedia.selectWindow.accesskey=W
+getUserMedia.selectScreen.label=పంచుకొనుటకు తెర:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=పంచుకొనుటకు అనువర్తనం:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = వీడియో లేదు
+getUserMedia.noApplication.label = అనువర్తనం లేదు
+getUserMedia.noScreen.label = తెర లేదు
+getUserMedia.noWindow.label = విండో లేదు
 getUserMedia.noAudio.label = ఆడియో లేదు
 getUserMedia.shareEntireScreen.label = మొత్తం తెర
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
@@ -515,6 +532,7 @@ getUserMedia.shareEntireScreen.label = మొత్తం తెర
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Replacement for #1 is the name of the application.
 # Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 విండో);#1 (#2 విండోలు)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -522,6 +540,7 @@ getUserMedia.shareEntireScreen.label = మొత్తం తెర
 getUserMedia.shareSelectedDevices.label = ఎంపికచేసిన పరికరం పంచుకొను;ఎంపికచేసిన పరికరాలు పంచుకొను
 getUserMedia.shareSelectedDevices.accesskey = S
 getUserMedia.shareScreen.label = తెరను పంచుకో
+getUserMedia.shareApplication.label = ఎంచిన అనువర్తనం పంచుకో
 getUserMedia.shareWindow.label = ఎంపికైన విండో పంచుకో
 getUserMedia.shareSelectedItems.label = ఎంపికైన అంశాలు పంచుకో
 getUserMedia.always.label = ఎప్పుడూ పంచుకో
@@ -533,6 +552,7 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = మీ కేమెరాను ప్రస్తుతం ఈ పేజీతో పంచుకుంటున్నారు.
 getUserMedia.sharingMicrophone.message2 = మీ మైక్రోఫోన్‌ను ప్రస్తుతం ఈ పేజీతో పంచుకుంటున్నారు.
 getUserMedia.sharingCameraAndMicrophone.message2 = మీ కేమెరాను మరియు మైక్రోఫోన్‌ను ప్రస్తుతం ఈపేజీతో  పంచుకుంటున్నారు.
+getUserMedia.sharingApplication.message = మీరు ప్రస్తుతం ఈ పేజీతో అనువర్తనం పంచుకుంటున్నారు.
 getUserMedia.sharingScreen.message = మీరు మీ తెరను ప్రస్తుతం ఈ పేజీతో పంచుకుంటున్నారు.
 getUserMedia.sharingWindow.message = మీరు విండోను ప్రస్తుతం ఈ పేజీతో పంచుకుంటున్నారు.
 getUserMedia.continueSharing.label = పంచుకోడాన్ని కొనసాగించు
@@ -540,6 +560,8 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = పంచుకోవడం ఆపివేయి
 getUserMedia.stopSharing.accesskey = S
 
+getUserMedia.sharingMenu.label = పరికరాలను పంచుకుంటున్న టాబ్లు
+getUserMedia.sharingMenu.accesskey = d
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
 #                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
@@ -551,8 +573,21 @@ getUserMedia.stopSharing.accesskey = S
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (కేమెరా)
+getUserMedia.sharingMenuMicrophone = %S (మైక్రోఫోన్)
+getUserMedia.sharingMenuApplication = %S (అనువర్తనం)
+getUserMedia.sharingMenuScreen = %S (తెర)
+getUserMedia.sharingMenuWindow = %S (విండో)
+getUserMedia.sharingMenuCameraMicrophone = %S (కేమెరా మరియు మైక్రోఫోన్)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (కేమెరా, మైక్రోఫోన్ మరియు అనువర్తనం)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (కేమెరా, మైక్రోఫోన్ మరియు తెర)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (కేమెరా, మైక్రోఫోన్ మరియు విండో)
+getUserMedia.sharingMenuMicrophoneApplication = %S (మైక్రోఫోన్ మరియు అనువర్తనం)
+getUserMedia.sharingMenuMicrophoneScreen = %S (మైక్రోఫోన్ మరియు తెర)
+getUserMedia.sharingMenuMicrophoneWindow = %S (మైక్రోఫోన్ మరియు విండో)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = తెలియని మూలం
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S నిదానంగా వుంది… ప్రారంభించుటకు…
