--- a/te/browser/chrome/browser/shellservice.properties
+++ b/te/browser/chrome/browser/shellservice.properties
@@ -7,8 +7,13 @@ safeModeLabel=%S రక్షితరీతి(&S)
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = %S ను మీ అప్రమేయ విహారిణిగా చేసుకొని మరింత లాభం పొందండి.
+setDefaultBrowserConfirm.label     = %S ను నా అప్రమేయ విహారిణిగా చేయి
+setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = ఐచ్ఛికములు
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = ఇప్పడు కాదు
+setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = మరలా నన్ను అడగవద్దు(D)
 setDefaultBrowserNever.accesskey   = D
 
