--- a/te/browser/chrome/browser/taskbar.properties
+++ b/te/browser/chrome/browser/taskbar.properties
@@ -6,7 +6,7 @@ taskbar.tasks.newTab.label=కొత్త టాబ్ తెరువుము
 taskbar.tasks.newTab.description=కొత్త విహారిణి టాబ్ తెరువుము.
 taskbar.tasks.newWindow.label=కొత్త విండో తెరువుము
 taskbar.tasks.newWindow.description=కొత్త విహారిణి విండో తెరువుము.
-taskbar.tasks.newPrivateWindow.label=కొత్త వ్యక్తిగత విండో
-taskbar.tasks.newPrivateWindow.description=వ్యక్తిగత బ్రౌజింగ్ రీతినందు కొత్త విండోను తెరువుము.
+taskbar.tasks.newPrivateWindow.label=కొత్త ఆంతరంగిక విండో
+taskbar.tasks.newPrivateWindow.description=ఆంతరంగిక విహారణ రీతినందు కొత్త విండోను తెరువుము.
 taskbar.frequent.label=తరచు
 taskbar.recent.label=ఇటీవలి
