--- a/te/toolkit/chrome/global/aboutSupport.properties
+++ b/te/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType పారామితులు కనబ
 adapterDescription = ఎడాప్టర్ వివరణ
 adapterVendorID = అమ్మకందారి ఐడి
 adapterDeviceID = పరికరం ఐడి
+adapterSubsysID = ఉపవ్యవస్థ ఐడి
 adapterDrivers = ఎడాప్టర్ డ్రైవర్స్
 adapterRAM = ఎడాప్టర్ RAM
 driverVersion = డ్రైవర్ రూపాంతరం
@@ -71,6 +72,7 @@ driverDate = డ్రైవర్ తేది
 adapterDescription2 = ఎడాప్టర్ వివరణ (GPU #2)\u0020
 adapterVendorID2 = అమ్మకందారి ID (GPU #2)\u0020
 adapterDeviceID2 = పరికరం ID (GPU #2)
+adapterSubsysID2 = ఉపవ్యవస్థ ఐడి (GPU #2)
 adapterDrivers2 = ఎడాప్టర్ డ్రైవర్లు (GPU #2)
 adapterRAM2 = ఎడాప్టర్ RAM (GPU #2)
 driverVersion2 = డ్రైవర్ వర్షన్ (GPU #2)
