--- a/te/browser/chrome/browser/devtools/profiler.properties
+++ b/te/browser/chrome/browser/devtools/profiler.properties
@@ -13,13 +13,16 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+profiler.label2=పనితనం
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
+profiler.panelLabel2=పనితనం పానల్
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
 profiler.commandkey2=VK_F5
+profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
@@ -33,10 +36,12 @@ noRecordingsText=అక్కడ ఏ ప్రొఫైల్స్ లేవు
 # LOCALIZATION NOTE (recordingsList.itemLabel):
 # This string is displayed in the recordings list of the Profiler,
 # identifying a set of function calls.
+recordingsList.itemLabel=#%S రికార్డింగ్
 
 # LOCALIZATION NOTE (recordingsList.recordingLabel):
 # This string is displayed in the recordings list of the Profiler,
 # for an item that has not finished recording.
+recordingsList.recordingLabel=పురోగతిలో వుంది...
 
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Profiler,
@@ -51,33 +56,44 @@ recordingsList.saveLabel=దాచు
 # LOCALIZATION NOTE (profile.tab):
 # This string is displayed in the profile view for a tab, after the
 # recording has finished, as the recording 'start → stop' range in milliseconds.
+profile.tab=%1$S మిసె → %2$S మిసె
 
 # LOCALIZATION NOTE (graphs.fps):
 # This string is displayed in the framerate graph of the Profiler,
 # as the unit used to measure frames per second. This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.fps=ఫ్రెపసె
 
 # LOCALIZATION NOTE (category.*):
 # These strings are displayed in the categories graph of the Profiler,
 # as the legend for each block in every bar. These labels should be kept
 # AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.other=గెకో
+category.css=శైలిలు
+category.js=JIT
+category.gc=GC
 category.network=నెట్వర్క్
 category.graphics=గ్రాఫిక్స్
 category.storage=నిల్వ
+category.events=ఇన్పుట్ మరియు ఘటనలు
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
+table.root=(root)
 
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
 # labels which, when clicked, jump to the debugger.
+table.url.tooltiptext=డీబగ్గర్ నందు మూలం దర్శించు
 
 # LOCALIZATION NOTE (table.zoom.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the 'zoom'
 # buttons (small magnifying glass icons) which spawn a new tab.
+table.zoom.tooltiptext=కొత్త టాబ్ నందు ఫ్రేమ్ తనిఖీ
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=ప్రొఫైల్ దాయి...
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
