--- a/te/browser/chrome/browser/devtools/projecteditor.properties
+++ b/te/browser/chrome/browser/devtools/projecteditor.properties
@@ -19,6 +19,7 @@ projecteditor.confirmUnsavedTitle=దాయని మార్పులు
 # LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
 # This string is displayed as the message of the confirm prompt that checks
 # to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=మీరు చేసిన మార్పులను దాయలేదు మీరు నిష్క్రమిస్తే అవి పోతాయి. మీరు ఖచ్చితంగా కొనసాగాలని అనుకుంటున్నారా?
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
