[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -6,9 +6,9 @@ history-panelmenu.label = Imbali
 # LOCALIZATION NOTE(history-panelmenu.tooltiptext2): %S is the keyboard shortcut
 history-panelmenu.tooltiptext2 = Bonisa imbali yakho (%S)
 
-privatebrowsing-button.label = IWindow entsha yangasese
+privatebrowsing-button.label = I-Festile entsha yangasese
 # LOCALIZATION NOTE(privatebrowsing-button.tooltiptext): %S is the keyboard shortcut
-privatebrowsing-button.tooltiptext = Vula iwindow entsha yokubhrawuza ngasese (%S)
+privatebrowsing-button.tooltiptext = Vula ifestile entsha yokubhrawuza ngasese (%S)
 
 save-page-button.label = Gcina iphepha
 # LOCALIZATION NOTE(save-page-button.tooltiptext3): %S is the keyboard shortcut
