--- a/xh/browser/chrome/browser/devtools/debugger.properties
+++ b/xh/browser/chrome/browser/devtools/debugger.properties
@@ -19,15 +19,16 @@
 
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
-DebuggerWindowTitle=IDebugger yebhrawuza
+DebuggerWindowTitle=I-Debugger yebhrawuza
 
 # LOCALIZATION NOTE (DebuggerWindowScriptTitle):
 # The title displayed for the debugger window when a script is selected.
-DebuggerWindowScriptTitle=IDebugger yebhrawuza - %S
+DebuggerWindowScriptTitle=I-Debugger yebhrawuza - %S
 
 # LOCALIZATION NOTE (ToolboxDebugger.tooltip):
 # This string is displayed in the tooltip of the tab when the debugger is
 # displayed inside the developer tools window..
+ToolboxDebugger.tooltip=I-Debugger ye-JavaScript
 
 # LOCALIZATION NOTE (debuggerMenu.commandkey, debuggerMenu.accesskey)
 # Used for the menuitem in the tool menu
