--- a/xh/browser/chrome/browser/syncQuota.properties
+++ b/xh/browser/chrome/browser/syncQuota.properties
@@ -30,7 +30,7 @@ quota.remove.label          = Susa
 quota.treeCaption.label     = Sukuzithintela iiayithem ukuze kuyekiswe ukungqamanisa kuvuleke nesithuba kwiseva.
 # LOCALIZATION NOTE (quota.removal.label): %S is a list of engines that will be
 # disabled and whose data will be removed once the user confirms.
-quota.removal.label         = Ungqamaniso lweFirefox luya kususa ezi ngcombolo zilandelayo: %S.
+quota.removal.label         = Ungqamaniso lwe-Firefox luya kususa ezi ngcombolo zilandelayo: i-%S.
 # LOCALIZATION NOTE (quota.list.separator): This is the separator string used
 # for the list of engines (incl. spaces where appropriate)
 quota.list.separator        = ,\u0020
