--- a/xh/browser/crashreporter/crashreporter-override.ini
+++ b/xh/browser/crashreporter/crashreporter-override.ini
@@ -4,5 +4,5 @@
 ; This file is in the UTF-8 encoding
 [Strings]
 ; LOCALIZATION NOTE (CrashReporterProductErrorText2): The %s is replaced with a string containing detailed information.
-CrashReporterProductErrorText2=UFirefox ube nengxaki waza wonakala. Siza kuzama ukubuyisela iithebhu zakho neefestile xa eqalisa kwakhona.\n\nNgelishwa umniki-ngxelo yokonakala akanakho ukuthumela ingxelo yokonakala.\n\nIinkcukacha: %s
-CrashReporterDescriptionText2=UFirefox ube nengxaki waza wonakala. Siza kuzama ukubuyisela iithebhu zakho neefestile xa eqalisa kwakhona.\n\nUkuze sikwazi ukufumanisa nokulungisa ingxaki, ungasithumela ingxelo yokonakala.
+CrashReporterProductErrorText2=I-Firefox ibe nengxaki yaza yonakala. Siza kuzama ukubuyisela iithebhu zakho neefestile xa eqalisa kwakhona.\n\nNgelishwa umniki-ngxelo wokonakala akanakho ukuthumela ingxelo yokonakala.\n\nIinkcukacha: %s
+CrashReporterDescriptionText2=I-Firefox ube nengxaki waza wonakala. Siza kuzama ukubuyisela iithebhu zakho neefestile xa eqalisa kwakhona.\n\nUkuze sikwazi ukufumanisa nokulungisa ingxaki, ungasithumela ingxelo yokonakala.
