--- a/xh/browser/installer/nsisstrings.properties
+++ b/xh/browser/installer/nsisstrings.properties
@@ -29,7 +29,7 @@ WARN_MIN_SUPPORTED_OS_MSG=Uxolo! i-$BrandShortName ayinakho ukufakelwa. Le nguqu
 WARN_WRITE_ACCESS=Akuvunyelwa ukuba ubhale kwisalathisi sofakelo.\n\nCofa kuKulungile ukukhetha isalathisi esahlukileyo.
 WARN_DISK_SPACE=Akunasithuba saneleyo kwidiski sokufakela kule ndawo.\n\nCofa kuKulungile ukukhetha indawo eyahlukileyo.
 WARN_ROOT_INSTALL=Ayikwazi ukufakela engcanjini yediskhi yakho.\n\nCofa kuKulungile ukukhetha indawo eyahlukileyo.
-WARN_MANUALLY_CLOSE_APP_LAUNCH=I-$BrandShortName iyasebenza.\n\nNceda uvale i$BrandShortName phambi kokumisela inguqulelo osandula ukuyifakela.
+WARN_MANUALLY_CLOSE_APP_LAUNCH=I-$BrandShortName iyasebenza.\n\nNceda uvale i-$BrandShortName phambi kokumisela inguqulelo osandula ukuyifakela.
 
 ERROR_DOWNLOAD=Ukhuphelo lwakho luphazanyisiwe.\n\nNceda ucofe iqhosha likaKulungile ukuze uqhube.
 
