--- a/xh/webapprt/webapp-uninstaller/webapp-uninstaller.properties
+++ b/xh/webapprt/webapp-uninstaller/webapp-uninstaller.properties
@@ -6,5 +6,5 @@
 # LOCALIZATION NOTE: $AppName will be replaced with the (already localized)
 #                    name of the webapp being uninstalled.
 
-^UninstallCaption=I$AppName ikhutshiwe
-UN_CONFIRM_UNINSTALL=I$AppName iza kukhutshwa kwikhompyutha yakho.
+^UninstallCaption=I-$AppName ikhutshiwe
+UN_CONFIRM_UNINSTALL=I-$AppName iza kukhutshwa kwikhompyutha yakho.
