--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -12,7 +12,7 @@ droponhomemsg=Ingaba ufuna olu xwebhu lube liphepha lakho elitsha lasekhaya?
 
 # LOCALIZATION NOTE (contextMenuSearch): %1$S is the search engine,
 # %2$S is the selection string.
-contextMenuSearch=Khangela %1$S ye- "%2$S"
+contextMenuSearch=Khangela i-%1$S ye- "%2$S"
 contextMenuSearch.accesskey=S
 
 # bookmark dialog strings
@@ -45,7 +45,7 @@ addonDownloadCancelTooltip=Rhoxisa
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 first add-on's name, #2 number of add-ons, #3 application name
 addonsInstalled=#1 ifakelwe ngempumelelo.;#2 izongezelelo zifakelwe ngempumelelo.
-addonsInstalledNeedsRestart=#1 ziya kufakelwa emva kokuqalisa#3.#2 izongezelelo ziya kufakelwa emva kokuqalisa#3.
+addonsInstalledNeedsRestart=u-#1 uya kufakelwa emva kokuqalisa kwakhona u-#3.; no-#2 izongezelelo ziya kufakelwa emva kokuqalisa#3.
 addonInstallRestartButton=Qalisa Kwakhona Ngoku
 addonInstallRestartButton.accesskey=R
 
@@ -110,7 +110,7 @@ installPlugin.button.accesskey=F
 installPlugin.ignoreButton.label=Musa ukubuza kwakhona
 installPlugin.ignoreButton.accesskey=s
 
-crashedpluginsMessage.title=I%Ssoftwe encedisayo yonakele.
+crashedpluginsMessage.title=I-%S softiwe encedisayo yonakele.
 crashedpluginsMessage.reloadButton.label=Layisha kwakhona ikhasi
 crashedpluginsMessage.reloadButton.accesskey=L
 crashedpluginsMessage.submitButton.label=Thumela ingxelo yokonakala
@@ -138,13 +138,13 @@ pluginActivate.learnMore=Funda ngaphezulu…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
-pluginActivateOutdated.message=i-%3$S ithintele isifakelo esiphelelweyo "%1$S" ekubeni siqhubeke kwi-%2$S.
+pluginActivateOutdated.message=i-%3$S ithintele isifakelo esiphelelweyo se-"%1$S" ekubeni siqhubeke kwi-%2$S.
 pluginActivateOutdated.label=Isifakelo esiphelelweyo
 pluginActivate.updateLabel=Sihlaziye ngoku…
 # LOCALIZATION NOTE (pluginActivateVulnerable.message, pluginActivateVulnerable.label):
 # These strings are used when an unsafe plugin has no update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
-pluginActivateVulnerable.message=i-%3$S ithintele isongezelelo esingakhuselekanga "%1$S" ekubeni siqhube kwi-%2$S.
+pluginActivateVulnerable.message=i-%3$S ithintele isongezelelo esingakhuselekanga se-"%1$S" ekubeni siqhube kwi-%2$S.
 pluginActivateVulnerable.label=Isongezelelo esisengozini!
 pluginActivate.riskLabel=Ingozi iphi?
 # LOCALIZATION NOTE (pluginActivateBlocked.message): %1$S is the plugin name, %2$S is brandShortName
@@ -153,9 +153,9 @@ pluginActivateBlocked.label=Ivalelwe ukuze ukhuseleke
 pluginActivateDisabled.message=I-"%S" ivaliwe ukuba ingasebenzi.
 pluginActivateDisabled.label=Kwaphulwe isakhono
 pluginActivateDisabled.manage=Lawula izifakelo…
-pluginEnabled.message="%S" ivaliwe ukuba ingasebenzi %S.
-pluginEnabledOutdated.message=Isongezelelo esiphelelweyo "%S" sivuliwe ukuba sisebenze kwi-%S.
-pluginEnabledVulnerable.message=Isongezelelo esingakhuselekanga "%S" sivuliwe ukuba sisebenze kwi-%S.
+pluginEnabled.message=I-"%S" ivaliwe ukuba ingasebenzi %S.
+pluginEnabledOutdated.message=Isongezelelo esiphelelweyo se-"%S" sivuliwe ukuba sisebenze kwi-%S.
+pluginEnabledVulnerable.message=Isongezelelo esingakhuselekanga se-"%S" sivuliwe ukuba sisebenze kwi-%S.
 pluginInfo.unknownPlugin=Akwaziwa
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
@@ -457,12 +457,12 @@ webapps.doNotUninstall.accesskey = D
 webapps.requestUninstall = Ingaba ufuna ukungafakeli "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=I%S ngoku ikwisikrini esipheleleyo.
+fullscreen.entered=I-%S ngoku ikwisikrini esipheleleyo.
 # LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.rememberDecision=Khumbula isigqibo se%S
+fullscreen.rememberDecision=Khumbula isigqibo se-%S
 
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
-fullscreenButton.tooltip=Bonisa iwindow kwiskrini esipheleleyo (%S)
+fullscreenButton.tooltip=Bonisa ifestile kwiskrini esipheleleyo (%S)
 
 service.toolbarbutton.label=Iinkonzo
 service.toolbarbutton.tooltiptext=Iinkonzo
@@ -478,14 +478,14 @@ social.markpageMenu.label=Gcina Iphepha kwi-%S
 social.marklinkMenu.label=Gcina Ikhonkco kwi-%S
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
-social.error.message=I%1$S ayikwazi ukunxibelelana ne%2$S ngoku.
-social.error.tryAgain.label=Zama kwakhona
+social.error.message=I-%1$S ayikwazi ukunxibelelana ne%2$S ngoku.
+social.error.tryAgain.label=I-Zama kwakhona
 social.error.tryAgain.accesskey=Z
-social.error.closeSidebar.label=Vala le bha yasecaleni
+social.error.closeSidebar.label=I-Vala le bha yasecaleni
 social.error.closeSidebar.accesskey=V
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
-social.aria.toolbarButtonBadgeText=%1$S (%2$S)
+social.aria.toolbarButtonBadgeText=I-%1$S (%2$S)
 
 # Identity notifications popups
 identity.termsOfService = Imiqathango yenkonzo
