--- a/xh/browser/chrome/browser/feeds/subscribe.properties
+++ b/xh/browser/chrome/browser/feeds/subscribe.properties
@@ -9,9 +9,9 @@ addHandlerAddButtonAccesskey=A
 handlerRegistered="%S" sele ibhaliswe njengeFido yoFundo
 liveBookmarks=Izalathisi eziphawulayo eziphilayo
 subscribeNow=Rhuma Ngoku
-chooseApplicationMenuItem=Khetha iAplikheshini…
-chooseApplicationDialogTitle=Khetha iAplikheshini
-alwaysUse=Soloko usebenzisa i-%S ukurhuma kwiifido
+chooseApplicationMenuItem=Khetha i-Aplikheshini…
+chooseApplicationDialogTitle=Khetha i-Aplikheshini
+alwaysUse=Soloko usebenzisa i-%S ukurhuma kwiifidi
 mediaLabel=Iifayile zemidiya
 
 # LOCALIZATION NOTE: The next string is for the size of the enclosed media.
@@ -29,7 +29,7 @@ gigabyte=I-GB
 # doing.
 #   e.g. alwaysUseForVideoPodcasts : "Always use Miro to subscribe to video podcasts."
 #   %S = application to use (Miro, iTunes, ...)
-alwaysUseForFeeds=Soloko usebenzisa i-%S ukurhuma kwiifido.
+alwaysUseForFeeds=Soloko usebenzisa i-%S ukurhuma kwiifidi.
 alwaysUseForAudioPodcasts=Soloko usebenzisa i-%S ukurhuma kwii-podcast.
 alwaysUseForVideoPodcasts=Soloko usebenzisa i-%S ukurhuma kwii-podcast zevidiyo.
 
@@ -48,4 +48,4 @@ feedSubscriptionVideoPodcast2=Ungarhuma kule podcast yevidiyo ukufumana izihlazi
 # Protocol Handling
 # "Add %appName (%appDomain) as an application for %protocolType links?"
 addProtocolHandler=Yongeza i-%S (%S) njengeaplikheshini yamakhonkco e-%S?
-addProtocolHandlerAddButton=Yongeza iAplikheshini
+addProtocolHandlerAddButton=Yongeza i-Aplikheshini
