--- a/xh/browser/updater/updater.ini
+++ b/xh/browser/updater/updater.ini
@@ -6,4 +6,4 @@
 [Strings]
 TitleText=%MOZ_APP_DISPLAYNAME% Uhlaziyo
 InfoText=%MOZ_APP_DISPLAYNAME% ifakela uhlaziyo lwakho kwaye iza kuqalisa kwangoku…
-MozillaMaintenanceDescription=INkonzo yoLondolozo lweMozilla iqinisekisa ukuba unayo inguqulelo yamvanje neyona ikhuselekileyo yeMozilla Firefox kwikhompyutha yakho. Ukugcina iFirefox igqibelele kubalulekile kukhuseleko lwenethiwekhi yakho kwaye iMozilla icebisa ukuba uyigcine isebenza le nkonzo.
+MozillaMaintenanceDescription=INkonzo yoLondolozo lwe-Mozilla iqinisekisa ukuba unayo inguqulelo yamvanje neyona ikhuselekileyo ye-Mozilla Firefox kwikhompyutha yakho. Ukugcina i-Firefox igqibelele kubalulekile kukhuseleko lwenethiwekhi yakho kwaye i-Mozilla icebisa ukuba uyigcine isebenza le nkonzo.
