--- a/xh/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/xh/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -41,15 +41,15 @@ notification.vulnerableNoUpdate.link=Ulwazi Olungaphaya Kolunikiweyo
 #LOCALIZATION NOTE (notification.enable) %1$S is the add-on name, %2$S is brand name
 notification.enable=I%1$S iya kuvumeleka emva kokuba uqalise kwakhona i%2$S.
 #LOCALIZATION NOTE (notification.disable) %1$S is the add-on name, %2$S is brand name
-notification.disable=I%1$S iya kuqhwaleliswa emva kokuba uqalise kwakhona i%2$S.
+notification.disable=I-%1$S iya kuqhwaleliswa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (notification.install) %1$S is the add-on name, %2$S is brand name
-notification.install=I%1$S iya kufakelwa emva kokuba uqalise kwakhona i%2$S.
+notification.install=I-%1$S iya kufakelwa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (notification.uninstall) %1$S is the add-on name, %2$S is brand name
-notification.uninstall=I%1$S iya kukhutshwa emva kokuba uqalise kwakhona i%2$S.
+notification.uninstall=I-%1$S iya kukhutshwa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (notification.upgrade) %1$S is the add-on name, %2$S is brand name
-notification.upgrade=I%1$S iya kuhlaziywa emva kokuba uqalise kwakhona i%2$S.
+notification.upgrade=I-%1$S iya kuhlaziywa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (notification.downloadError) %1$S is the add-on name.
-notification.downloadError=Kubekho imposiso ekukhutshelweni kwe%1$S.
+notification.downloadError=Kubekho imposiso ekukhutshelweni kwe-%1$S.
 notification.downloadError.retry=Zama kwakhona
 notification.downloadError.retry.tooltip=Zama ukukhuphela esi songezelelo kwakhona
 #LOCALIZATION NOTE (notification.installError) %1$S is the add-on name.
@@ -73,32 +73,32 @@ installFailed=Imposiso ekufakeleni
 installCancelled=Ufakelo lurhoxisiwe
 
 #LOCALIZATION NOTE (details.notification.incompatible) %1$S is the add-on name, %2$S is brand name, %3$S is application version
-details.notification.incompatible=I%1$S ihambelana ne %2$S %3$S.
+details.notification.incompatible=I-%1$S ihambelana kunye ne-%2$S ne-%3$S.
 #LOCALIZATION NOTE (details.notification.blocked) %1$S is the add-on name
-details.notification.blocked=I%1$S iqhwalelisiwe ngesizathu sokhuseleko nozinzo.
+details.notification.blocked=I-%1$S iqhwalelisiwe ngesizathu sokhuseleko nozinzo.
 details.notification.blocked.link=Ulwazi Olungaphaya Kolunikiweyo
 #LOCALIZATION NOTE (details.notification.softblocked) %1$S is the add-on name
-details.notification.softblocked=I%1$S yaziwa ngokubangela ingxaki yokhuseleko neyozinzo.
+details.notification.softblocked=I-%1$S yaziwa ngokubangela ingxaki yokhuseleko neyozinzo.
 details.notification.softblocked.link=Ulwazi Olungaphaya Kolunikiweyo
 #LOCALIZATION NOTE (details.notification.outdated) %1$S is the add-on name
 details.notification.outdated=Uhlaziyo olubalulekileyo lwe%1$S luyafumaneka.
 details.notification.outdated.link=Hlaziya ngoku
 #LOCALIZATION NOTE (details.notification.vulnerableUpdatable) %1$S is the add-on name
-details.notification.vulnerableUpdatable=I%1$S yaziwa ngokuba lixhoba kwaye kufanele ihlaziywe.
+details.notification.vulnerableUpdatable=I-%1$S yaziwa ngokuba lixhoba kwaye kufanele ihlaziywe.
 details.notification.vulnerableUpdatable.link=Hlaziya ngoku
 #LOCALIZATION NOTE (details.notification.vulnerableNoUpdate) %1$S is the add-on name
-details.notification.vulnerableNoUpdate=I%1$S yaziwa ngokuba lixhoba. Yisebenzise ngobulumko.
+details.notification.vulnerableNoUpdate=I-%1$S yaziwa ngokuba lixhoba. Yisebenzise ngobulumko.
 details.notification.vulnerableNoUpdate.link=Ulwazi Olungaphaya Kolunikiweyo
 #LOCALIZATION NOTE (details.notification.enable) %1$S is the add-on name, %2$S is brand name
-details.notification.enable=I%1$S iya kuvumeleka emva kokuba uqalise kwakhona i%2$S.
+details.notification.enable=I-%1$S iya kuvumeleka emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (details.notification.disable) %1$S is the add-on name, %2$S is brand name
-details.notification.disable=I%1$S iya kuqhwaleliswa emva kokuba uqalise kwakhona i%2$S.
+details.notification.disable=I-%1$S iya kuqhwaleliswa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (details.notification.install) %1$S is the add-on name, %2$S is brand name
-details.notification.install=I%1$S iya kufakelwa emva kokuba uqalise kwakhona i%2$S.
+details.notification.install=I-%1$S iya kufakelwa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (details.notification.uninstall) %1$S is the add-on name, %2$S is brand name
-details.notification.uninstall=I%1$S iya kukhutshwa emva kokuba uqalise kwakhona i%2$S.
+details.notification.uninstall=I-%1$S iya kukhutshwa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (details.notification.upgrade) %1$S is the add-on name, %2$S is brand name
-details.notification.upgrade=I%1$S iya kuhlaziywa emva kokuba uqalise kwakhona i%2$S.
+details.notification.upgrade=I-%1$S iya kuhlaziywa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (details.notification.openH264Pending) OpenH264 will be automatically installed later.
 details.notification.openH264Pending=Iza kufakelwa kwangoku.
 
@@ -165,7 +165,7 @@ cmd.purchaseAddon.label=Intengo ye%S…
 cmd.purchaseAddon.accesskey=e
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
-eulaHeader=I%S ifuna ukuba wamnkele esi sivumelwano selayisensi yomsebenzisi phambi kokuba uqhube nofakelo:
+eulaHeader=I-%S ifuna ukuba wamkele esi sivumelwano selayisenisi yomsebenzisi phambi kokuba uqhube nofakelo:
 
 type.extension.name=Izandiso
 type.theme.name=Imbonakalo
