--- a/xh/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/xh/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -7,10 +7,10 @@
 # Application not responding
 # LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Vala i-%S
-restartMessageNoUnlocker=I%S sele ihamba, kodwa ayiphenduli. Ukuvula ifestile entsha, qala uvale %S inkqubo ekhoyo okanye uqalise kwakhona ikhompyutha yakho.
-restartMessageUnlocker=I%S sele ihamba, kodwa ayiphenduli. %S inkqubo endala mayivalwe ukuvula ifestile entsha.
-restartMessageNoUnlockerMac=Ikopi ye%S sele ivulile. Inye kuphela ikopi ye%S enokuvulwa ngexesha.
-restartMessageUnlockerMac=Ikopi ye%S sele ivulile. Ikopi ehambayo ye%S iya kumka ukuze kuvulwe le fayile.
+restartMessageNoUnlocker=I-%S sele ihamba, kodwa ayiphenduli. Ukuvula ifestile entsha, qala uvale %S inkqubo ekhoyo okanye uqalise kwakhona ikhompyutha yakho.
+restartMessageUnlocker=I-%S sele ihamba, kodwa ayiphenduli. %S inkqubo endala mayivalwe ukuvula ifestile entsha.
+restartMessageNoUnlockerMac=Ikopi ye-%S sele ivulile. Inye kuphela ikopi ye-%S enokuvulwa ngexesha.
+restartMessageUnlockerMac=Ikopi ye-%S sele ivulile. Ikopi ehambayo ye-%S iya kumka ukuze kuvulwe le fayile.
 
 # Profile manager
 # LOCALIZATION NOTE (profileTooltip): First %S is the profile name, second %S is the path to the profile folder.
