--- a/xh/toolkit/chrome/search/search.properties
+++ b/xh/toolkit/chrome/search/search.properties
@@ -10,7 +10,7 @@ addEngineAddButtonLabel=Fakela
 error_loading_engine_title=Imposiso yokukhutshelwayo
 # LOCALIZATION NOTE (error_loading_engine_msg2): %1$S = brandShortName, %2$S = location
 error_loading_engine_msg2=%S ayikwazi ukukhuphela isoftwe encedisayo yokukhangela kwi:\n%S
-error_duplicate_engine_msg=%S ayikwazi ukufakela isoftwe encedisayo yokukhangela kwi"%S" kuba injini eneli gama sele ikho.
+error_duplicate_engine_msg=I-%S ayikwazi ukufakela isoftwe encedisayo yokukhangela kwi-"%S" kuba injini eneli gama sele ikho.
 
 error_invalid_engine_title=Fakela imposiso
 # LOCALIZATION NOTE (error_invalid_engine_msg): %S = brandShortName
