--- a/it/browser/chrome/browser/loop/loop.properties
+++ b/it/browser/chrome/browser/loop/loop.properties
@@ -112,3 +112,5 @@ feedback_back_button = Indietro
 feedback_window_will_close_in2 = Questa finestra verrà chiusa in {{countdown}} secondo;Questa finestra verrà chiusa in {{countdown}} secondi
 feedback_rejoin_button = Richiama
 feedback_report_user_button = Segnala utente
+rooms_list_current_conversations = Conversazione corrente;Conversazioni correnti
+rooms_list_no_current_conversations = Nessuna conversazione corrente
