--- a/it/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/it/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -49,8 +49,8 @@ email-link-button.label = Invia link
 email-link-button.tooltiptext3 = Invia link a questa pagina per email
 quit-button.tooltiptext.linux2 = Esci da %1$S (%2$S)
 quit-button.tooltiptext.mac = Esci da %1$S (%2$S)
-loop-call-button.label = Chiama
-loop-call-button.tooltiptext = Invita altre persone per parlare
+loop-call-button2.label = Avvia una conversazione\u00AD
+loop-call-button2.tooltiptext = Avvia una conversazione
 panic-button.label = Dimentica
 panic-button.tooltiptext = Elimina alcune informazioni dalla cronologia di navigazione
 web-apps-button.label = App
