[S] browser: Bug 1014332 share button CUI widget

--- a/it/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/it/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -51,6 +51,8 @@ quit-button.tooltiptext.linux2 = Esci da %1$S (%2$S)
 quit-button.tooltiptext.mac = Esci da %1$S (%2$S)
 loop-call-button2.label = Avvia una conversazione\u00AD
 loop-call-button2.tooltiptext = Avvia una conversazione
+social-share-button.label = Condividi questa pagina\u00AD
+social-share-button.tooltiptext = Condividi questa pagina
 panic-button.label = Dimentica
 panic-button.tooltiptext = Elimina alcune informazioni dalla cronologia di navigazione
 web-apps-button.label = App
