[te] update from Pootle (firefox)

--- a/te/browser/chrome/browser/devtools/webconsole.properties
+++ b/te/browser/chrome/browser/devtools/webconsole.properties
@@ -249,6 +249,11 @@ messageToggleDetails=సందేశం వివరాలు చూపుము
 # #1 number of empty slots
 # example: 1 empty slot
 # example: 5 empty slots
+emptySlotLabel=#1ఖాలీ స్లాట్;#1 ఖాళీ స్లాట్లు
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.index=(సూచి)
+table.iterationIndex=(ఆవృత సూచి)
+table.key=కీ
+table.value=విలువలు
