--- a/te/browser/chrome/browser/devtools/webide.properties
+++ b/te/browser/chrome/browser/devtools/webide.properties
@@ -2,7 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+title_noApp=ఫైర్‌ఫాక్స్ WebIDE
 
+runtimeButton_label=రన్‌టైమ్ ఎంపికచేయి
+projectButton_label=అనువర్తనం తెరు
 
 mainProcess_label=ముఖ్య ప్రోసెస్
 
