--- a/te/browser/chrome/browser/devtools/storage.properties
+++ b/te/browser/chrome/browser/devtools/storage.properties
@@ -44,11 +44,15 @@ tree.emptyText=పేజీపైన హోస్ట్స్ లేవు
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
+table.emptyText=ఎంపికచేసిన హోస్ట్ కొరకు ఏ డేటా లేదు
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=కుకీలు
+tree.labels.localStorage=స్థానిక నిల్వ
+tree.labels.sessionStorage=సెషన్ నిల్వ
+tree.labels.indexedDB=ఇండెక్స్డ్‌డిబి
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -56,26 +60,48 @@ tree.labels.cookies=కుకీలు
 table.headers.cookies.name=పేరు
 table.headers.cookies.path=పాత్
 table.headers.cookies.host=డొమైన్
+table.headers.cookies.expires=ఇంతలో గడువుతీరును
+table.headers.cookies.value=విలువ
+table.headers.cookies.lastAccessed=చివరిగా ఏక్సెస్ చేసింది
+table.headers.cookies.creationTime=సృష్టించినది
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
+table.headers.cookies.isHttpOnly=isHttpOnly
 # LOCALIZATION NOTE (table.headers.cookies.isSecure):
 # This string is used in the header for the column which denotes whether a
 # cookie can be accessed via a secure channel only or not.
+table.headers.cookies.isSecure=isSecure
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
+table.headers.cookies.isDomain=isDomain
 
+table.headers.localStorage.name=కీ
+table.headers.localStorage.value=విలువ
 
+table.headers.sessionStorage.name=కీ
+table.headers.sessionStorage.value=విలువ
 
+table.headers.indexedDB.name=కీ
+table.headers.indexedDB.db=డేటాబేస్ పేరు
+table.headers.indexedDB.objectStore=ఆబ్జక్ట్ స్టోర్ పేరు
+table.headers.indexedDB.value=విలువ
+table.headers.indexedDB.origin=మూలం
 table.headers.indexedDB.version=వర్షన్
+table.headers.indexedDB.objectStores=ఆబ్జక్ట్ స్టోర్స్
+table.headers.indexedDB.keyPath=కీ
+table.headers.indexedDB.autoIncrement=స్వియ పెంపుదల
+table.headers.indexedDB.indexes=సూచికలు
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
 # Cookie
+label.expires.session=సెషన్
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
+storage.search.placeholder=వడపోత విలువలు
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
@@ -83,3 +109,4 @@ storage.data.label=దత్తాంశము
 
 # LOCALIZATION NOTE (storage.parsedValue.label):
 # This is the heading displayed over the item parsed value in the sidebar
+storage.parsedValue.label=పార్స్‌డ్ విలువలు
