[te] update from Pootle (firefox)

--- a/te/browser/chrome/browser/devtools/webide.properties
+++ b/te/browser/chrome/browser/devtools/webide.properties
@@ -3,13 +3,20 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 title_noApp=ఫైర్‌ఫాక్స్ WebIDE
+title_app=ఫైర్‌ఫాక్స్ WebIDE: %S
 
 runtimeButton_label=రన్‌టైమ్ ఎంపికచేయి
-projectButton_label=అనువర్తనం తెరు
+projectButton_label=అనువర్తనం తెరువు
 
 mainProcess_label=ముఖ్య ప్రోసెస్
 
+local_runtime=స్థానిక రన్‌టైమ్
+remote_runtime=రిమోట్ రన్‌టైమ్
+remote_runtime_promptTitle=రిమోట్ రన్‌టైమ్
+remote_runtime_promptMessage=hostname:port
 
+importPackagedApp_title=సంచయం ఎంచుకోండి
+importHostedApp_title=హోస్టైన అనువర్తనం తెరు
 
 
 # These messages appear in a notification box when an error occur.
@@ -31,3 +38,7 @@ addons_status_installed=సంస్థాపించబడింది
 
 
 # Validation status
+status_valid=చెల్లునటువంటి
+status_warning=హెచ్చరికలు
+status_error=దోషాలు
+status_unknown=తెలియని
