--- a/es-MX/dom/chrome/accessibility/AccessFu.properties
+++ b/es-MX/dom/chrome/accessibility/AccessFu.properties
@@ -46,6 +46,8 @@ buttonmenu     =       menú de botones
 whitespace     =       espacio en blanco
 pagetablist    =       lista de pestañas
 canvas         =       canvas
+checkmenuitem  =       elemento de menú seleccionable
+label          =       etiqueta
 passwordtext   =       texto de contraseña
 radiomenuitem  =       elemento de menú de radio
 textcontainer  =       contenedor de texto
@@ -194,6 +196,7 @@ paneAbbr           =       panel
 dialogAbbr         =       diálogo
 separatorAbbr      =       separador
 toolbarAbbr        =       barra de herramientas
+statusbarAbbr      =       barra de estado
 tableAbbr          =       tbl
 columnheaderAbbr   =       encabezado de columna
 rowheaderAbbr      =       encabezado de fila
@@ -220,6 +223,7 @@ animationAbbr      =       animación
 equationAbbr       =       ecuación
 buttonmenuAbbr     =       menú de botones
 whitespaceAbbr     =       espacio en blanco
+pagetablistAbbr    =       lista de pestañas
 canvasAbbr         =       canvas
 checkmenuitemAbbr  =       elemento del menú seleccionable
 labelAbbr          =       etiqueta
@@ -231,11 +235,16 @@ treetableAbbr      =       tabla de árbol
 headerAbbr         =       encabezado
 footerAbbr         =       pie de página
 paragraphAbbr      =       párrafo
+entryAbbr          =       entrada
+captionAbbr        =       leyenda
+headingAbbr        =       encabezado
 sectionAbbr        =       sección
 formAbbr           =       formulario
 comboboxlistAbbr   =       lista desplegable
+comboboxoptionAbbr =       opción de caja desplegable
 imagemapAbbr       =       imgmap
 listboxoptionAbbr  =       opción
+listboxAbbr        =       caja de lista
 flatequationAbbr   =       ecuación plana
 gridcellAbbr       =       cuadrícula
 noteAbbr           =       nota
