[es-MX] update from Pootle (firefox)

--- a/es-MX/toolkit/chrome/global/aboutSupport.properties
+++ b/es-MX/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Parámetros de ClearType no encontrados
 adapterDescription = Descripción de Adaptador
 adapterVendorID = ID de Vendor
 adapterDeviceID = ID del dispositivo
+adapterSubsysID = ID del subsys
 adapterDrivers = Controladores del Adaptador
 adapterRAM = Adaptador de la RAM
 driverVersion = Versión del dispositivo
@@ -71,6 +72,7 @@ driverDate = Fecha del dispositivo
 adapterDescription2 = Descripción del adaptador (GPU #2)\u0020
 adapterVendorID2 = ID del vendedor (GPU #2)\u0020
 adapterDeviceID2 = ID del dispositivo (GPU #2)
+adapterSubsysID2 = ID del subsys (GPU #2)
 adapterDrivers2 = Controladores del adaptador (GPU #2)
 adapterRAM2 = RAM del adaptador (GPU #2)
 driverVersion2 = Versión del controlador (GPU #2)
